# TheDumpster

.github/: README.md
ArduinoChromebookEnroller/: .gitignore  ArduinoChromebookEnroller.ino  README.md  config.json
AxCrac/: AxCrac.py  script.recaf
AxCrac/.github/: readme.md
BAPI/: .eslintrc  .gitignore  package.json  pnpm-lock.yaml  tsconfig.json
BAPI/config/: config.example.json  credentials.example.json
BAPI/src/: index.ts
CPlusPlusExamples/: README.md
CPlusPlusExamples/calculator/: calculator.cpp
CPlusPlusExamples/myfirstprogram/: myfirstprogram.cpp
ColorMC/: package.json  pnpm-lock.yaml
Discord-but-annoying/: LICENSE  README.md  index.js  manifest.json  style.scss
DiscordTSBotTemplate/: .prettierrc.json  LICENSE  README.md  index.ts  package-lock.json  package.json  settings.ts  tsconfig.json
DiscordTSBotTemplate/internals/: indexCommands.ts  (+3 more)
FRCat-Solid/: 404.html  index.html  package.json  pnpm-lock.yaml
MinecraftServerToSingleplayer/: .gitignore  README.md  main.py
PassMaker/: index.html  package.json  pnpm-lock.yaml
RepluggedBotRewrite/: .eslintrc.json  .gitignore  EXAMPLE.env  jsdoc.json  package.json  pnpm-lock.yaml
blog.aspy.dev/: README.md
isOdd/: README.md  setup.cfg
isOdd/src/isOdd/: main.py
ksg.uk/: index.html  package.json  pnpm-lock.yaml  tsconfig.json
porkord.org/: .eslintrc.json  .stylelintrc.json  LICENSE  index.html  package.json  pnpm-lock.yaml
status.aspy.dev/: TODO.md  config.json  package.json  pnpm-lock.yaml  wrangler.toml
url.aspy.dev-frontend/: 404.css  404.html  README.md  index.css  index.html
(+87 files in other folders)
