[metadata]
name = isOdd-SomeAspy
version = 1.0.1
author = Aiden
author_email = amb@aspy.dev
description = find out if a number is odd xd
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SomeAspy/idOdd
project_urls =
    Bug Tracker = https://github.com/SomeAspy/isOdd/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src